appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
  - adClickTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - inputText: "https://www.search-company.site/#ad-id-11"
      - pressKey: Enter

      - runFlow: ../shared/browser_screen/click_on_fire_button.yaml
      - runFlow: ../shared/browser_screen/dismiss_fire_dialog.yaml
      - assertVisible:
          id: "ad-id-11"
      - tapOn:
          id: "ad-id-11"
      - assertVisible:
          text: "Publisher site"
      - runFlow: ../shared/browser_screen/click_on_privacy_shield.yaml
      - assertVisible:
          text: "View Tracker Companies"
      - tapOn:
          text: "View Tracker Companies"
      - assertVisible:
          text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
      - assertVisible:
          text: "About our Web Tracking Protections"
      - assertVisible:
          text: ".*Ad Company"
      - assertVisible:
          text: "ad-company.site"
      - action: back
      - assertVisible:
          text: "View Non-Tracker Companies"
      - tapOn:
          text: "View Non-Tracker Companies"
      - assertVisible:
          text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
      - assertVisible:
          text: "About our Web Tracking Protections"
      - assertVisible:
          text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
      - assertVisible:
          text: "How our search ads impact our protections"
      - assertVisible:
          text: ".*Ad Company"
      - assertVisible:
          text: "convert.ad-company.site"
