appId: com.duckduckgo.mobile.android
tags:
  - adClickTest
---
- launchApp:
    clearState: true

- runFlow: ../shared/onboarding.yaml

- inputText: "https://www.search-company.site/#ad-id-1"
- pressKey: Enter
- extendedWaitUntil:
    visible:
      text: ".*Got It.*"
    timeout: 60000
- tapOn:
    text: "Got It"
- scrollUntilVisible:
    element:
      id: "ad-id-2"
    direction: DOWN
- tapOn:
    id: "ad-id-2"
- extendedWaitUntil:
    visible:
      text: "Publisher site"
    timeout: 60000
- tapOn:
    id: "com.duckduckgo.mobile.android:id/omnibarIconContainer"
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- assertVisible:
    text: "ad-company.site"
- action: back
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "We did not identify any requests from third-party domains."
- assertVisible:
    text: "About our Web Tracking Protections"
