appId: com.duckduckgo.mobile.android
tags:
    - androidDesignSystemTest
---
- retry:
      maxRetries: 3
      commands:
        - launchApp:
            clearState: true
            stopApp: true

        - runFlow: ../shared/skip_all_onboarding.yaml

        - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
        - tapOn:
            text: "Settings"
            index: 0
        - scrollUntilVisible:
            element:
              text: "Set of components designed following our Design System"
            direction: DOWN
        - assertVisible: "Set of components designed following our Design System"
        - tapOn: "Android Design System Preview"
        - assertVisible: "COLOR PALETTE"
        - tapOn: "TYPOGRAPHY"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Text Appearance Caption"
            direction: DOWN
        - tapOn: "BUTTONS"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Primary Large"
            direction: DOWN
        - tapOn: "Primary Large"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Secondary Small"
            direction: DOWN
        - tapOn: "Secondary Small"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Destructive Small"
            direction: DOWN
        - tapOn: "Destructive Small"
        - tapOn: "TEXT INPUT"
        - tapOn: "DIALOGS"
        - tapOn: "Text Alert Dialog With Image"
        - assertVisible: "Keep Using"
        - tapOn: "Keep Using"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Stacked Text Alert Destructive Dialog With 4 buttons"
            direction: DOWN
        - tapOn: "Stacked Text Alert Dialog With 4 buttons"
        - assertVisible: "Keep Using"
        - tapOn: "Keep Using"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Promo Bottom Sheet"
            direction: DOWN
        - tapOn: "Action Bottom Sheet"
        - assertVisible: "Primary Item"
        - tapOn: "Primary Item"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/actionBottomSheetButtonWithTitle"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/item_container"
            index: 0
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Promo Bottom Sheet with image"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/promoBottomSheetButtonWithTitle"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/bottomSheetPromoPrimaryButton"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Cookie Consent dialog with animation"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/animated_button"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/primaryCta"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/no_hide_button"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/primaryCta"
        - tapOn: "LAYOUTS"
        - assertVisible: "Dax Dialog Card"
        - tapOn: "NAVIGATION"
        - assertVisible: "Top bar"
        - tapOn: "INTERACTIVE"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/dax_switch_one"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/radio_button_two"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Remember my choice"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/checkbox_one"
        - tapOn:
            point: "50%,75%"
        - tapOn: "MESSAGING"
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/close"
            index: 0
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Medium Message"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/close"
            index: 0
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Big Single Message"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/close"
            index: 0
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Big Two Actions Message"
            direction: DOWN
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/secondaryActionButton"
            index: 0
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/primaryActionButton"
            index: 0
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Compose AppTP Banner Enabled"
            direction: DOWN
        - assertVisible: "Compose AppTP Banner Enabled"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Compose AppTP Banner Revoked"
            direction: DOWN
        - assertVisible: "Compose AppTP Banner Revoked"
        - tapOn: "LIST ITEMS"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Single Line Items"
            direction: DOWN
        - assertVisible: "Single Line Items"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: ".*Item with Extra Large Leading Image.*"
            direction: DOWN
        - assertVisible: ".*Item with Extra Large Leading Image.*"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Two Line Items"
            direction: DOWN
        - assertVisible: "Two Line Items"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Settings List Item Always On"
            direction: DOWN
        - assertVisible: "Settings List Item Always On"
        - tapOn: "Others"
        - scrollUntilVisible:
            timeout: 50000
            speed: 60
            element:
              text: "Enable Dark Theme"
            direction: UP
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/trailingSwitch"
        - tapOn: "Typography"
        - tapOn: "BUTTONS"
        - tapOn: "TEXT INPUT"
        - tapOn: "DIALOGS"
        - tapOn: "LAYOUTS"
        - tapOn: "NAVIGATION"
        - tapOn: "INTERACTIVE"
        - tapOn: "MESSAGING"
        - tapOn: "LIST ITEMS"
        - tapOn: "OTHERS"
