appId: com.duckduckgo.mobile.android
name: "ReleaseTest: AppTP onboarding"
tags:
    - releaseTest
---
- retry:
      maxRetries: 3
      commands:
        - launchApp:
              clearState: true
              stopApp: true

        - runFlow: ../shared/skip_all_onboarding.yaml

        - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
        - tapOn:
            text: "Settings"
            index: 0
        - tapOn: "App Tracking Protection"
        - assertVisible: "One easy step for better app privacy!"
        - assertVisible: "Continue"
        - tapOn: "Continue"
        - assertVisible: "How does it work?"
        - assertVisible: "Continue"
        - tapOn: "Continue"
        - assertVisible: "Who sees your data?"
        - assertVisible:
            text: "Enable App Tracking Protection"
            index: 1
        - tapOn:
            text: "Enable App Tracking Protection"
            index: 1
        - tapOn:
            text: "OK"
            optional: true
        - assertVisible:
              text: "Good news! App Tracking Protection is now enabled.*"
        - assertVisible: "Got it!"
        - tapOn: "Got it!"
        - assertVisible:
            text: "Protection for some apps is automatically disabled. View apps"
            optional: true
        - assertVisible: "Blocked tracking attempts will appear here"
        - assertVisible:
            id: "com.duckduckgo.mobile.android:id/activity_apps"
            index: 0
        - assertVisible:
            id: "com.duckduckgo.mobile.android:id/activity_apps"
            index: 1
        - scroll
        - assertVisible: "ABOUT"
        - assertVisible: "What are app trackers?"
        - assertVisible: "App Tracking Protection FAQ"
        - assertVisible: "MANAGE"
        - assertVisible: "Having Issues?"
        - assertVisible: "View Apps"
        - assertVisible: "Disable and Delete Data"
