appId: com.duckduckgo.mobile.android
name: "Autofill: Manually add credentials"
---
# Pre-requisite: the user is viewing the password manager screen with no saved passwords, on an autofill-eligible device

- runScript: 3_script.js

- repeat:
      while:
          true: ${output.addLogins.counter < output.addLogins.domains.length}
      commands:
          - tapOn:
                  id: addLoginManually
          - assertVisible:
                  text: Add Password
          - assertNotVisible:
                  id: view_menu_save

          - tapOn:
                id: usernameEditText
          - inputText: "user"

          - assertVisible:
                id: view_menu_save

          - tapOn:
                id: passwordEditText
          - inputText: "123"

          - tapOn:
                id: domainEditText
          - inputText: "${output.addLogins.domains[output.addLogins.counter]}"

          - tapOn:
                id: notesEditText
          - inputText: "a note"

          - tapOn:
                id: view_menu_save
                retryTapIfNoChange: false

          - assertVisible: "Last updated.*"

          - tapOn: "Navigate up"

          - assertVisible:
                text: "Save and autofill passwords"
          - evalScript: ${output.addLogins.counter++}

- assertVisible:
    text: "#"

- assertVisible:
    text: "a.example.com"

- assertNotVisible:
    text: "https://a.example.com"

- assertVisible:
    text: "fill.dev"

- assertNotVisible:
    text: "fill.dev/example"