appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Prompted to save and update credentials on web form"
tags:
    - autofillNoAuthTests
---
# Pre-requisite: on an autofill-eligible device, including having a modern WebView
- retry:
      maxRetries: 3
      commands:
        - launchApp:
              clearState: true
        - runFlow: ../shared/skip_all_onboarding.yaml

        - tapOn:
            id: "omnibarTextInput|inputField"
        - inputText: "fill.dev/form/login-simple"
        - pressKey: enter

        - tapOn:
            text: "Got it"
            optional: true

        - tapOn:
            id: "username"

        - runFlow: steps/decline_in_browser_password_import.promo.yaml

        - tapOn:
            id: "username"
        - inputText: "user"
        - pressKey: Back

        - tapOn:
            id: "password"
        - inputText: "password1"
        - pressKey: Back

        - tapOn:
            text: "Login"
        - assertVisible: "Save Password"
        - tapOn: "Save Password"

        - pressKey: back
        - tapOn: "Close Autofill Dialog"

        - tapOn:
            id: "password"
        - inputText: "password2"
        - pressKey: Back

        - tapOn:
            text: "Login"
        - assertVisible: "Update Password"
        - tapOn: "Update Password"

        - runFlow: steps/access_passwords_screen.yaml

        - tapOn: "user"
        - tapOn:
            id: "internal_password_icon"
        - assertVisible: "password2"